--- a/package.json
+++ b/package.json
@@ -9,19 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@progress/kendo-react-animation": "^10.1.0",
+    "@progress/kendo-react-buttons": "^10.1.0",
+    "@progress/kendo-react-data-tools": "^10.1.0",
+    "@progress/kendo-react-dateinputs": "^10.1.0",
+    "@progress/kendo-react-dialogs": "^10.1.0",
+    "@progress/kendo-react-dropdowns": "^10.1.0",
+    "@progress/kendo-react-grid": "^10.1.0",
+    "@progress/kendo-react-indicators": "^10.1.0",
+    "@progress/kendo-react-inputs": "^10.1.0",
+    "@progress/kendo-react-labels": "^10.1.0",
+    "@progress/kendo-react-layout": "^10.1.0",
+    "@progress/kendo-react-listbox": "^10.1.0",
+    "@progress/kendo-react-notification": "^10.1.0",
+    "@progress/kendo-react-popup": "^10.1.0",
+    "@progress/kendo-react-progressbars": "^10.1.0",
+    "@progress/kendo-react-tooltip": "^10.1.0",
+    "@progress/kendo-theme-default": "^10.5.0",
+    "next": "15.3.0",
+    "oidc-client-ts": "^3.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.3",
+    "typescript": "^5"
   }
 }
